# sinowealth-kb-tool

./: Cargo.toml  LOFREE_BOOTLOADER_EXIT_CHALLENGE.md  LOFREE_FLOW_LITE_FIRMWARE_ANALYSIS.md  LOFREE_IMPLEMENTATION_SUMMARY.md  LOFREE_MODE_SWITCH_CHALLENGE.md  LOFREE_MODE_SWITCH_SUCCESS.md  LOFREE_PROTOCOL_ANALYSIS.md  LOFREE_TECHNICAL_ANALYSIS_FOR_GPT_O3.md  LOFREE_TEST_NOTES.md  PCAPNG_USB_ANALYSIS.md  analyze_pcap.py  fix_macos_exclusive_access.patch  flowlite_alt_exit.rs  flowlite_debug.rs  flowlite_exit_simple.rs  flowlite_exit_test.rs  flowlite_test.rs  flowlite_write_test.rs  lofree-flow-lite-firmware-development-notes.md  lofree_exclusive_fix.rs  lofree_firmware_protocol.txt  lofree_manual_reboot.rs  lofree_rusb_implementation.rs  test_bootloader_exit.rs  test_exclusive_access.rs  test_lofree_firmware.rs  test_mode_switch.rs  test_mode_switch_correct.rs
Lofree/: extract_firmware.py  lofree-flow-lite-key-mapper-upgrade-capture.pcapng  lofree-flow-lite-oe921-keyboard-upgrade-tool-capture.pcapng  sinowealth-kb-tool
Lofree/Sys64/: HIDUsb.lib  Lofree_resource.res  moc_adddelaytime.cpp  moc_addkey.cpp  moc_customenterlabel.cpp  moc_deleteconfirm.cpp  moc_dialogfirst.cpp  moc_dialogsecond.cpp  moc_exeisrun.cpp  moc_formsetting.cpp  moc_formupdate.cpp  moc_keyboardset.cpp  moc_keynumberlimit.cpp  moc_lightset.cpp  moc_macro.cpp  moc_maindialog.cpp  moc_musicform.cpp  moc_mybuttonenter.cpp  moc_mybuttonentera.cpp  moc_mydevice.cpp  moc_mylabel.cpp  moc_newconfig.cpp  moc_pairform.cpp  moc_postmsg.cpp  moc_questiondialog.cpp  moc_samemacro.cpp  moc_selectkey.cpp  moc_systemaudio.cpp  moc_updataparam.cpp  qrc_conf.cpp
decompiled_output/: BleCore.cs  Lofree-Flow-Lite_Unpaired_OE921_V1.61_DLL_Upgrade.csproj  USBUpdateTool.EditValueControl.resx  USBUpdateTool.FormButtonSetting.resx  USBUpdateTool.FormEditCidMid.resx  USBUpdateTool.FormImageBarEdit.resx  USBUpdateTool.FormMakeUpgradeTool.resx  USBUpdateTool.FormPairTool.resx  USBUpdateTool.FormPasswordBack.resx  USBUpdateTool.FormPasswordInput.resx  USBUpdateTool.FormProgressStyle.resx  USBUpdateTool.MakeUpgradeTool.Files.LiteConfig.txt  USBUpdateTool.MakeUpgradeTool.Files.Windows.Devices.winmd  USBUpdateTool.Properties.Resources.resx  USBUpdateTool.VidPidControl.resx  USBUpdateTool_ProcessedByFody.cs  Win32.cs  WindControls.MsgBaseForm.resx  costura.metadata  costura.mono.cecil.dll.compressed
decompiled_output/Costura/: AssemblyLoader.cs
decompiled_output/DriverLib/: ACPAN.cs  BatteryStatus.cs  ChangeDPIKey.cs  DPIConfig.cs  DPILed.cs  DataParser.cs  DeviceInfo.cs  DeviceStatusChanged.cs  FlashDataMap.cs  HIDD_ATTRIBUTES.cs  HIDP_CAPS.cs  (+17 more)
docs/: upgrade-tool-decompilation-instructions.md
src/: device_selector.rs  device_spec.rs  flowlite_debug.rs  isp_device.rs  lib.rs  lofree_direct_test.rs  lofree_probe.rs  lofree_test_tool.rs  main.rs  test_rusb_ack.rs  test_rusb_complete.rs
tasks/: lofree_flow_lite_notes.md  lofree_new_hypothesis.md  lofree_protocol_analysis.md  lofree_test_results.md  next-task.md  usb_capture_instructions.md  windows_app_fix_attempt.md
tasks/lofree-sinowealth-extension/reference-code/: Cargo.toml  README.md  firmware_format.rs  firmware_operations.rs  mod.rs  usb_protocol.rs
tasks/lofree-sinowealth-extension/reference-code/examples/: device_detection.rs  parse_firmware.rs
(+187 files in other folders)
