[package]
name = "sinowealth-kb-tool"
description = """
A utility for reading and writing flash contents on Sinowealth 8051-based HID devices through the commonly found ISP bootloader
"""
repository = "https://github.com/carlossless/sinowealth-kb-tool"
version = "1.0.0"
edition = "2021"
license = "MIT"
rust-version = "1.65"

[lib]
name = "sinowealth_kb_tool"
path = "src/lib.rs"

[[bin]]
name = "lofree-test"
path = "src/lofree_test_tool.rs"

[[bin]]
name = "lofree-direct"
path = "src/lofree_direct_test.rs"

[[bin]]
name = "flowlite-test"
path = "flowlite_test.rs"

[[bin]]
name = "flowlite-debug"
path = "flowlite_debug.rs"

[[bin]]
name = "flowlite-exit-test"
path = "flowlite_exit_test.rs"

[[bin]]
name = "flowlite-exit-simple"
path = "flowlite_exit_simple.rs"

[[bin]]
name = "flowlite-alt-exit"
path = "flowlite_alt_exit.rs"

[[bin]]
name = "flowlite-write-test"
path = "flowlite_write_test.rs"

[[bin]]
name = "test-mode-switch"
path = "test_mode_switch.rs"

[[bin]]
name = "test-mode-switch-correct"
path = "test_mode_switch_correct.rs"

[[bin]]
name = "test-bootloader-exit"
path = "test_bootloader_exit.rs"

[[bin]]
name = "test-lofree-firmware"
path = "test_lofree_firmware.rs"

[[bin]]
name = "lofree-bootloader-test"
path = "lofree_bootloader_test.rs"

[[bin]]
name = "simple-reboot-test"
path = "simple_reboot_test.rs"

[[bin]]
name = "force-reboot-test"
path = "force_reboot_test.rs"

[[bin]]
name = "test-feature-reports"
path = "test_feature_reports.rs"

[[bin]]
name = "simple-feature-reboot"
path = "simple_feature_reboot.rs"

[[bin]]
name = "test-rusb-ack"
path = "src/test_rusb_ack.rs"

[[bin]]
name = "test-rusb-complete"
path = "src/test_rusb_complete.rs"

[dependencies]
clap = "4.1"
clap-num = "1.0"
dialoguer = "0.11.0"
hidparser = { git = "https://github.com/microsoft/mu_rust_hid.git", tag = "v1.0.3" } # needed until 1.0.3 is published on crates.io
ihex = "3.0"
indicatif = "0.17.11"
itertools = "0.14.0"
md5 = "0.7"
thiserror = "2.0"
crc32fast = "1.4.0"

[dependencies.hidapi]
version = "2.6"
default-features = false
features = ["linux-static-libusb"]

[dependencies.log]
version = "0.4"
features = ["max_level_debug"]

[dependencies.simple_logger]
version = "5.0"
default-features = false
features = ["stderr", "colors", "timestamps"]

[dependencies.phf]
version = "0.11"
features = ["macros"]

[dependencies.rusb]
version = "0.9"

[dev-dependencies]
assert_cmd = "2.0.17"
chrono = "0.4.41"
predicates = "3.1.3"
serial_test = "3.2.0"
stdext = "0.3.3"
